# haskell-todomvc-backend

./: README.md  haskell-todomvc-backend.cabal  todomvc-haskell-servant-backend.cabal
app/: Main.hs
app/servant/: Main.hs
src/Todo/: App.hs
src/Web/TodoMVC/: Servant.hs
src/Web/TodoMVC/Backend/: Servant.hs
src/Web/TodoMVC/Backend/Pure/: Todo.hs
src/Web/TodoMVC/Backend/Pure/Todo/: App.hs  Types.hs
src/Web/TodoMVC/Backend/Servant/: API.hs  Shared.hs
src/Web/TodoMVC/Servant/: API.hs  Shared.hs
