name:                haskell-todomvc-backend
version:             0.1.0.0
synopsis:            todomvc backend implemented in haskell using various backend frameworks
description:         todomvc backend implemented in haskell using various backend frameworks
homepage:            https://github.com/adarqui/haskell-todomvc-backend
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Web.TodoMVC.Backend.Servant
                       Web.TodoMVC.Backend.Servant.API
                       Web.TodoMVC.Backend.Servant.Shared
                       Web.TodoMVC.Backend.Pure.Todo
                       Web.TodoMVC.Backend.Pure.Todo.App
                       Web.TodoMVC.Backend.Pure.Todo.Types
  build-depends:       base >=4.7 && <4.9
                     , aeson
                     , containers
                     , deepseq
                     , either
                     , lens-aeson
                     , lens >= 4.12.3
                     , mtl
                     , servant
                     , servant-server
                     , stm
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable haskell-todomvc-backend-servant
  hs-source-dirs:      app/servant
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-todomvc-backend
  if impl(ghcjs)
     build-depends:    ghcjs-base

  default-language:    Haskell2010

test-suite haskell-todomvc-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-todomvc-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-todomvc-backend
