name:                todomvc-haskell-servant-backend
version:             0.1.0.0
synopsis:            todomvc backend implemented in haskell + servant
description:         todomvc backend implemented in haskell + servant
homepage:            https://github.com/adarqui/todomvc-haskell-servant-backend
license:             MIT
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    Web.TodoMVC.Servant
    Web.TodoMVC.Servant.API
    Web.TodoMVC.Servant.Shared
    Todo
    Todo.App
    Todo.Types
  build-depends:       base >=4.7 && <4.9
                     , aeson
                     , containers
                     , either
                     , lens-aeson
                     , lens >= 4.12.3
                     , mtl
                     , servant
                     , servant-server
                     , stm
                     , text
                     , transformers
                     , wai
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable todomvc-haskell-servant-backend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todomvc-haskell-servant-backend
  if impl(ghcjs)
     build-depends:    ghcjs-base

  default-language:    Haskell2010

test-suite todomvc-haskell-servant-backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todomvc-haskell-servant-backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/todomvc-haskell-servant-backend
